--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "game"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
+authors = ["Benedikt Brandmaier", "Maximilian Floto", "Marion Hinkel", "Leo Schnüll", "Sander Stella", "Philipp Wolf" ]
+rust-version = "1.57"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = { git="https://github.com/ggez/ggez", branch="devel" }
+ggez = { git="https://github.com/ggez/ggez", branch="devel", commit = "1ecf42e9e71228d711dc6f85b9e5e95b65a21935"}
 serde = "1.0.145"
 serde_yaml = "0.9.13"
 tracing = "0.1.37"
