--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -15,6 +15,7 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 fastrand = "1.8.0"
 chrono = "0.4.23"
+bsod = "0.1.1"
 
 [build-dependencies]
 fs_extra = "1.2.0"
